# AuraGit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.agents/skills/git-flow-enforcer/: SKILL.md
src/: ai_client.py  config.py  git_manager.py  main.py
src/git_ai/: __init__.py  ai_client.py  config.py  git_manager.py  main.py  memory.py
src/git_ai_commits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
