[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-ai-commits"
version = "0.1.0"
description = "Professional AI-powered git commit generator"
authors = [
    { name = "Martin Villarreal" }
]
dependencies = [
    "GitPython",
    "requests",
    "click",
    "python-dotenv",
    "rich",
    "openai",
    "google-generativeai",
    "anthropic",
]
requires-python = ">=3.8"

[project.scripts]
git-ai = "git_ai.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
