[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auragit"
version = "0.2.0"
description = "AuraGit: Generador profesional de commits con IA. Automatiza tu flujo Git con mensajes inteligentes (Conventional Commits). Soporte para Ollama, OpenAI, Gemini y Claude. Integración como Git Hook y soporte multi-idioma."
authors = [
    { name = "Martin Villarreal" }
]
dependencies = [
    "GitPython",
    "requests",
    "click",
    "python-dotenv",
    "rich",
    "openai",
    "google-genai",
    "anthropic",
]
requires-python = ">=3.8"

[project.scripts]
git-ai = "git_ai.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
